Fix overflow hidden bug

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -5,5 +5,4 @@
 .App-list {
   background-color: #eee;
   border-radius: 5px;
-  overflow: hidden;
 }
